--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,5 @@
     }
 ],
 "related_applications": [],
-"prefer_related_applications": false,
-"shortcuts": []
+"prefer_related_applications": false
 }
