--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 "name": "Acaidimy",
 "short_name": "Acaidimy",
-"start_url": "/",
+"start_url": "/cfa1-acaidimy.github.io/",
 "display": "standalone",
 "description": "A description for your application",
 "lang": "en",
